forget to add manifest

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Orpos Grid Studio </title>
+  <link rel="manifest" href="manifest.json">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 </head>
@@ -44,6 +45,7 @@
   <br>
   <br>
   <br>
+  link
  <script src="elode.min.js"></script>
   <script src="html2canvas.min.js"></script>
   <script>
